manifests/service.yml
  
apiVersion: v1
kind: Service
metadata:
  name: webhooks-listener
spec:
  selector:
    app: webhooks-listener
  ports:
  - port: 80
    targetPort: 5000
