manifests/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webhooks-listener-ingress
spec:
  routes:
    - match: Host(`webhooks.miki.bot`)
      kind: Rule
      services:
        - kind: Service
          name: webhooks-listener
          port: 80
